har fixat så att det blurrar desto längre ner man kommer och system med kort

--- a/css/style.css
+++ b/css/style.css
@@ -41,22 +41,25 @@ body {
 
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    justify-content: space-around;
     align-items: center;
 }
 
 .nav > .button {
-    background-color: whitesmoke;
+    background-color: rgb(240, 240, 240);
     display: table;
     text-align: center;
     border-radius: 5px;
     height: 80%;
+    width: 25%
 }
 
 .nav > .button > a {
     display: table-cell;
     vertical-align: middle;
     font-size: 3rem;
+    color: black;
+    text-decoration: none;
 }
 
 header {
@@ -71,6 +74,7 @@ header {
     align-items: center;
     justify-content: center;
     border-radius: 15px;
+    backdrop-filter: blur(3px);
 }
 
 #title-long {
@@ -84,13 +88,13 @@ header {
 }
 
 #logo_multicolor {
-    color:rgb(243, 123, 223);
+    color:rgb(163, 0, 136);
 }
 
 
 .scrolled {
     position: fixed;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.85  );
     height: 5vh;
     width: 100%;
     border-radius: 0;
@@ -101,7 +105,6 @@ header {
     font-size: 2rem;
     color: black;
 }
-
 
 
 .line1 {
@@ -121,7 +124,7 @@ header {
 
 .article1 img {
     background-size: cover;
-    width: 65%;
+    width: auto;
     height: 90%;
     background-repeat: no-repeat;
     background-size: contain;
@@ -134,7 +137,7 @@ header {
     margin-right:auto;
     position: absolute;
     z-index: -1;
-    border-radius: 10px
+    border-radius: 10px;
 }
 
 #shadow {
@@ -150,7 +153,31 @@ header {
 
 .article2 {
     grid-area: a2;
+    display: grid;
+    width: 100%;
+    height: 100%;
+    grid-template-areas: 
+    ".. .. .. .. .."
+    ".. c1 .. .. .."
+    ".. .. .. c2 .."
+    ".. c3 .. .. .."
+    ".. .. .. .. ..";
+    grid-template-rows: 2fr 4fr 4fr 4fr 2fr;
+    grid-template-columns: 1fr 3fr 1fr 3fr 1fr
 }
+
+#card1 {
+    grid-area: c1;
+    background-color: rgb(248, 248, 248);
+    border-radius: 50px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+}
+
+
+
+
+
+
 .article3 {
     grid-area: a3;
 }
@@ -159,3 +186,4 @@ header {
     grid-area: fo;
     background-color: gray;
 }
+
